# AEON

./: .gitignore  Cargo.toml  README.md  build.rs  install.AEON.sh
.cargo/: config.toml
.github/: FUNDING.yml
src/: cli.rs  guardian.rs  lib.rs  macros.rs  main.rs
src/daemon/: core.rs  daemon.rs  log.rs  mod.rs  notif.rs
src/modules/: REST.rs  backup.rs  monitoring.rs  rest.rs  scan_sys.rs  test.rs
src/port/: scan.rs
src/socket/: handler.rs  lib.rs
