[package]
name = "AEON"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
colored = "3.1.1"
libc = "0.2.182"
machine-info = "1.0.9"
memory-stats = "1.2.0"
notify-rust = "4.12.0"
rand = "0.9.2"
serde = "1.0.228"
serde_json = "1.0.149"
sysinfo = "0.37.2"
tokio = {version="1.49.0" , features=["full"] } 
