[package]
name = "AEON"
version = "0.1.25"
edition = "2024"

[lib]
name="aeon"
path="src/lib.rs"

[[bin]]
name="AEON"
path="src/main.rs"

[[bin]]
name ="aeoncli"
path="src/cli.rs"

[[bin]]
name = "aeon_guardian"
path = "src/guardian.rs"

[dependencies]
axum = "0.8.8"
bytes = "1.11.1"
bzip2 = "0.6.1"
chrono ={version =  "0.4.44",features=["serde"]}
clap ={version="4.5.58",features=["derive","cargo"]} 
clap_complete = "4.5.66"
colored = "3.1.1"
flate2 = "1.1.9"
gzip = "0.1.2"
indicatif = "0.17.11"
libc = "0.2.182"
local-ip-address = "0.6.13"
machine-info = "1.0.9"
memory-stats = "1.2.0"
mimalloc = "0.1.52"
netstat2 = "0.11.2"
notify-rust = "4.12.0"
nvml-wrapper = "0.12.1"
parking_lot = "0.12.5"
rand = "0.9.2"
rayon = "1.12.0"
reqwest = {version="0.13.3",features=["json"]} 
serde = {version="1.0.228",features=["derive"]}
serde_json = "1.0.149"
socket2 = "0.6.2"
sysinfo = "0.37.2"
tar = "0.4.44"
tokio = {version="1.49.0" , features=["full"] } 
tokio-util ={version="0.7.18",features=["codec"]} 
tower-http = {version = "0.6.8" , features=["cors"]}
update = "0.0.0"
walkdir = "2.5.0"
xz2 = "0.1.7"
